# grug-brain.mcp

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  index-worker.js  package-lock.json  package.json  server.js  test-brain-management.js  test-load-brains.js  verify_phase3.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml
Formula/: grug-brain.rb
commands/: dream.md  ingest.md  install.md  setup.md
docs/: code-standards.md  getting-started.md
docs/building/: rust-redesign-phase-1-discovery.md  rust-redesign-phase-1-pseudocode.md  rust-redesign-phase-1-review.md  rust-redesign-phase-2-discovery.md  rust-redesign-phase-2-pseudocode.md  rust-redesign-phase-2-review.md  rust-redesign-phase-3-discovery.md  rust-redesign-phase-3-pseudocode.md  rust-redesign-phase-3-review.md  rust-redesign-phase-4-discovery.md  rust-redesign-phase-4-pseudocode.md  rust-redesign-phase-4-review.md  rust-redesign-phase-5-discovery.md  rust-redesign-phase-5-pseudocode.md  rust-redesign-phase-5-review.md  scratch.sh
docs/plans/: 2026-03-26-brain-management.md  2026-03-26-unified-brains.md  2026-04-01-rust-redesign.md
hooks/: hooks.json
scripts/: auto-update.sh  dev-cleanup.sh  dev-reload.sh  fetch-docs.ts  smoke-test.sh
sites/grug-brag-doc/: app.js  index.html  styles.css
skills/conversation/: SKILL.md
src/: client.rs  config.rs  db.rs  git.rs  helpers.rs  lib.rs  main.rs  parsing.rs  protocol.rs  server.rs  service_install.rs  services.rs  spike.rs  types.rs  walker.rs  watcher.rs
src/adapters/: mod.rs
src/domain/: mod.rs  ports.rs
src/http/: assets.rs  graph.rs  handlers.rs  helpers.rs  memories.rs  mod.rs  search.rs  security.rs  sse.rs  write.rs
src/tools/: config.rs  conversation.rs  delete.rs  docs.rs  dream.rs  indexing.rs  mod.rs  read.rs  recall.rs  rename.rs  search.rs  similarity.rs  sync.rs  tfidf.rs  update.rs  write.rs
tests/: brag_doc_smoke.sh  http_integration.rs  property_write.rs  socket_integration.rs
tests/playwright/: a11y-audit.spec.js  cross-surface.spec.js  dw-3-sigma.spec.js  dw-4-editor.spec.js  dw-5-crud.spec.js  dw-6.spec.js  dw-tests.spec.js  fixtures.js  golden-read.spec.js  package-lock.json  package.json  (+1 more)
web/: app.js  index.html  styles.css
(+37 files in other folders)
