[package]
name = "grug-brain"
version = "4.0.1"
edition = "2024"

[[bin]]
name = "grug"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
regex = "1"
rmcp = { version = "1", features = ["transport-io", "server", "client"] }
rusqlite = { version = "0.35", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
