[package]
name = "grug-brain"
version = "4.2.1"
edition = "2024"

[[bin]]
name = "grug"
path = "src/main.rs"

[dependencies]
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hostname = "0.4"
mime_guess = "2"
notify = "7"
regex = "1"
rmcp = { version = "1", features = ["transport-io", "server", "client"] }
rusqlite = { version = "0.35", features = ["bundled"] }
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tempfile = "3"
tower = "0.5"
